# newjannieleproject

./: README.md
in/mmrcmpsp/: A-1.txt  X-1.txt  X-10.txt  X-2.txt  X-3.txt  X-4.txt  X-5.txt  X-6.txt  X-7.txt  X-8.txt  X-9.txt  run.py
in/mmrcmpsp/j20.mm/: j2049_1.mm
in/rcpsp/j30.sm/: .directory
sol/files_cg1/: j3013_10_cggpu.sol_cg_0_cggpu_0_cggpur2_1_cp_0_cr_0_cc_0_co_0_l_1_mc_0.200000_rc_0.000000_slk_0.500000_mi_10_jmp_5_lp.sol  j3013_10_cggpu.sol_cg_0_cggpu_1_cggpur2_0_cp_0_cr_0_cc_0_co_0_l_1_mc_0.200000_rc_0.000000_slk_0.500000_mi_10_jmp_5_lp.sol  j3013_10_cggpu.sol_cg_1_cggpu_0_cggpur2_0_cp_0_cr_0_cc_0_co_0_l_1_mc_0.200000_rc_0.000000_slk_0.500000_mi_10_jmp_5_lp.sol  j3013_1_cggpu.sol_cg_0_cggpu_0_cggpur2_1_cp_0_cr_0_cc_0_co_0_l_1_mc_0.200000_rc_0.000000_slk_0.500000_mi_10_jmp_5_lp.sol  j3013_3_cggpu.sol_cg_0_cggpu_0_cggpur2_0_cp_0_cr_0_cc_0_co_0_l_1_mc_0.200000_rc_0.000000_slk_0.500000_mi_10_jmp_5_lp.sol  j3013_5_cggpu.sol_cg_0_cggpu_0_cggpur2_1_cp_0_cr_0_cc_0_co_0_l_1_mc_0.200000_rc_0.000000_slk_0.500000_mi_10_jmp_5_lp.sol  j3013_8_cggpu.sol_cg_0_cggpu_0_cggpur2_1_cp_0_cr_0_cc_0_co_0_l_1_mc_0.200000_rc_0.000000_slk_0.500000_mi_10_jmp_5_lp.sol  j3013_9_cggpu.sol_cg_0_cggpu_0_cggpur2_1_cp_0_cr_0_cc_0_co_0_l_1_mc_0.200000_rc_0.000000_slk_0.500000_mi_10_jmp_5_lp.sol  (+7 more)
src/: BKGraph.cpp  BKGraph.hpp  CMakeLists.txt  Makefile  README  bron_kerbosch.cpp  bron_kerbosch.h  buildCBCOpt.sh  buildGPU.sh  buildGRBOptCuts.sh  buildLAHCAddressSanitizer.sh  buildLAHCDebug.sh  buildLAHCOpt.sh  buildLAHCOptWithoutLP.sh  buildLAHCProf.sh  buildVNSAddressSanitizer.sh  buildVNSDebug.sh  buildVNSOpt.sh  build_cgraph.cpp  build_cgraph.h  cgraph.c  cgraph.h  clique.c  clique.h  clique_elite_set.c  clique_elite_set.h  clique_extender.c  clique_extender.h  clique_separation.c  clique_separation.h  constructive.c  constructive.cbp  constructive.h  containers.c  cut_cg.c  cut_cg.h  cut_clique.c  cut_clique.h  cut_cover.c  cut_cover.h  (+122 more)
(+333 files in other folders)
